// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerSubtitle renders 1`] = `
<SubtitleWrapper>
  <SubtitleText>
    <h1>
      Hey
    </h1>
  </SubtitleText>
</SubtitleWrapper>
`;

exports[`BannerSubtitle renders child text  1`] = `
<SubtitleWrapper>
  <SubtitleText>
    And here is a test subtitle!
  </SubtitleText>
</SubtitleWrapper>
`;
